[package]
name = "asterai"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "client library for asterai"

[dependencies]
reqwest = "0.12.12"
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
thiserror = "2"
derive_builder = "0.20"
reqwest-eventsource = "0.6.0"
futures = "0.3.29"
log = "0.4"
